# placenta-image-classification

./: README.md  app_url.txt  config.py  inference usage example.py  inference.py  load model.py  main.py  main2.py  main3.py  pyproject.toml  requirements.txt  streamlit_app.py  test.py
colab files/: first_version.ipynb  second_version.ipynb  third_version.ipynb
training/: ImagesDataPipeline.py  model training.py
