[tool.poetry]
name = "placenta-week-classification-model"
version = "0.1.0"
description = ""
authors = ["gilihagbi <hagbi.gili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"  # or "^1.30.0" if downgrading for stability
fastai = "^2.7.18"
seaborn = "^0.13.2"
gdown = "^4.7.1"  # or "^4.7.1" if you downgrade it

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
